All basic endpoint CRUD handles was implemented.
